# modern-re2c-tutorials

./: .gitignore  CMakeLists.txt  license.txt  readme.md
doc/: 000-introduction.md  001-a-minimal-example.md  002-handle-end-of-stream-with-one-sentinel.md  003-handle-end-of-stream-if-more-sentinels.md  004-how-to-get-tokens.md  005-get-tokens-sync-one-shot.md  006-get-tokens-async-one-shot.md  007-experience-the-re2c-api-used-for-multi-shot-buffer.md  008-get-tokens-sync-multi-shot.md  009-get-tokens-async-multi-shot.md  010-using-re2c-condition.md  011-using-re2c-condition-v2.md  012-read-utf8-text.md  013-read-ucs2-text.md  014-read-ucs4-utf32-text.md  015-using-re2c-mtag.md  015-using-re2c-stag.md  016-using-re2c-mtag.md  016-using-re2c-stag.md  readme.md
doc/imgs/: 01-001-basic-terminology.tsp  01-002-YYCURSER.tsp  02-001-sentinel-position.tsp  03-001-one-shot-multi-shot-buffer.tsp  04-001-lexer-working-memory.tsp
script/: test_helper.cmake
src/: config.h  context.c  context.h  context2.c  context2.h
tests/: CMakeLists.txt  test01.lex  test02.lex  test03.lex  test04.lex  test05.lex  test06.lex  test07.lex  test08.lex  test09.lex  test10.lex  test11.lex  test12.lex  test13.lex  test14.lex  test15.lex  test16.lex
tests/re2c_gen_code/: readme.txt
